--- a/bachproef/conclusie.tex
+++ b/bachproef/conclusie.tex
@@ -18,5 +18,5 @@
 Bij de start van de tweede POC was er veel ambitie voor een volledig interactieve website te maken. Bij nader inzien bleek dit dus niet zo gemakkelijk te zijn. Alhoewel de theorie van Three.js niet uiterst moeilijk is, is de toepassing ervan echter zeer complex. Het verg
 
 \begin{itemize}
-	\item[2.] Hoe beïnvloedt 3D-interactie de betrokkenheid en tevredenheid van gebruikers in een e-commerce context?
+	\item Hoe beïnvloedt 3D-interactie de betrokkenheid en tevredenheid van gebruikers in een e-commerce context?
 \end{itemize}
